# rocq-mcp

./: .gitignore  ENHANCEMENT_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  tests.yml
examples/: test.v
src/rocq_mcp/: __init__.py  compile.py  compile_enrichment.py  coqc_tools.py  diag.py  health.py  interactive.py  server.py  verify.py
tests/: conftest.py  test_assumptions.py  test_auto_solve.py  test_check.py  test_compile.py  test_compile_file.py  test_diag.py  test_diagnostic_hints.py  test_envelope_contract.py  test_focus_depth.py  test_format_error.py  test_goal.py  test_hammer.py  test_health.py  test_import_failure_diagnostics.py  test_integration.py  test_memory_watchdog.py  test_notations.py  test_query.py  test_reconstruction.py  test_server.py  test_staleness.py  test_start.py  test_step.py  test_step_at_pos.py  test_step_enhanced.py  test_step_multi.py  test_timeout.py  test_toc.py  test_truncate.py  test_verify.py
