[project]
name = "rocq-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Rocq/Coq proof assistant based on Coq-LSP and Petanque"
authors = [{name = "Guillaume Baudart", email = "guillaume.baudart@inria.fr"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pytanque @ git+https://github.com/LLM4Rocq/pytanque.git",
]

[project.scripts]
rocq-mcp = "rocq_mcp.server:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[tool.uv]
package = true
